tests/machine/x/kotlin/left_join.kt
// Generated by Mochi compiler v0.10.28 on 2025-07-18T07:11:27Z
data class Customer(var id: Int, var name: String)

data class Order(var id: Int, var customerId: Int, var total: Int)

data class Row0(var orderId: Int, var customer: Customer, var total: Int)

data class Row1(var o: Order, var c: Customer)

// Code generated from left_join.mochi

val customers = mutableListOf(Customer(id = 1, name = "Alice"), Customer(id = 2, name = "Bob"))

val orders = mutableListOf(Order(id = 100, customerId = 1, total = 250), Order(id = 101, customerId = 3, total = 80))

val result = run {
    val __res = mutableListOf<Row0>()
    for (o in orders) {
        val __tmp = mutableListOf<Any?>()
        for (c in customers) {
            if (o.customerId == c.id) {
                __tmp.add(c)
            }
        }
        if (__tmp.isEmpty()) __tmp.add(null)
        for (c in __tmp) {
            __res.add(Row0(orderId = o.id, customer = c, total = o.total))
        }
    }
    __res
}

fun main() {
    println("--- Left Join ---")
    for (entry in result) {
        println(listOf("Order", entry.orderId, "customer", entry.customer, "total", entry.total).joinToString(" "))
    }
}
